--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,25 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation "com.android.support:design:28.0.0"
+
+    implementation 'com.blankj:utilcode:1.19.0'
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+    implementation 'jp.wasabeef:glide-transformations:3.3.0'
+
+    implementation 'com.just.agentweb:agentweb:4.0.2'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.2.1"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+    implementation 'com.lzx:MusicLibrary:1.4.4'
+    implementation 'com.android.support:support-media-compat:28.0.0'
+
 }
