--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,13 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.1"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    //ConverterFactory的String依赖包
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    //ConverterFactory的Gson依赖包
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    //CallAdapterFactory的Rx依赖包
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
     implementation 'com.lzx:MusicLibrary:1.4.4'
     implementation 'com.android.support:support-media-compat:28.0.0'
